solving database error
